[package]
name = "tactix"
version = "0.1.1"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "tactix"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]

[dependencies]
lazy_static = "1.4.0"
futures = "0.3.8"

tokio = { version = "1", features = ["full"] }

# faster memory allocator, seems to help PyO3 a decent amount
mimalloc = { version = "*", default-features = false}

[profile.release]
lto = "fat"
codegen-units = 1